--- a/Latest_pay_2.0/Mini_Project_N/src/app/paystatus/paystatus.component.html
+++ b/Latest_pay_2.0/Mini_Project_N/src/app/paystatus/paystatus.component.html
@@ -24,13 +24,13 @@
                 <span id="name"></span>  
             </div>
             <div class="col-3">
-                <span id="price">Amount: {{ order?.amount }}</span>
+                <span id="price">Amount: {{ order?.amount | currency: 'INR'  }}</span>
             </div>
             
         </div>
         <div class="row">
             <div class="col-9">
-                <span id="name">Shipping :00</span>
+                <span id="name">Shipping : 00</span>
             </div>
             <!-- <div class="col-3">
                 <span id="price">&pound;33.00</span>
@@ -43,7 +43,7 @@
     <div class="total">
         <div class="row">
             <div class="col-9"></div>
-            <div class="col-3"><span>Paid Amount: {{ order?.amount }}</span></div>
+            <div class="col-3"><span>Paid Amount: {{ order?.amount | currency: 'INR'  }}</span></div>
         </div>
     </div>
     <div class="tracking">
