Exception handling,junit testing and frontend design

--- a/Latest_pay_2.0/Mini_Project_N/src/app/payment-page/payment-page.component.css
+++ b/Latest_pay_2.0/Mini_Project_N/src/app/payment-page/payment-page.component.css
@@ -21,7 +21,7 @@
   max-width: 900px;
   width: 100%;
   gap: 1px;
-  background-color: #e8e4fd; /* Optional background for the content area */
+  background-color: #34a5e7; /* Optional background for the content area */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional shadow for better visibility */
   border-radius: 8px; /* Rounded corners for the container */
   padding: 20px; /* Ensure padding within container */
@@ -223,4 +223,9 @@ form .form-group textarea:focus {
 
 .delete-btn:hover {
   background-color: darkred;
+}
+
+
+.delete-icon:hover {
+  background-color: #567fbc;
 }
